# quadruped_ros2_control

./: .gitignore  17.37.md  ALGORITHM_DEVELOPMENT_PPT.md  CLEANUP_SUMMARY.md  DEVELOPMENT_LOG.md  GITHUB_UPLOAD_SUMMARY.md  MPC_WBC_HIERARCHICAL_CONTROL.md  NULLSPACE_PROJECTION_MATH.md  PPT_COMPLETE_SUMMARY.md  PPT_DIAGRAMS_GUIDE.md  PPT_PRESENTATION_OUTLINE.md  PROJECT_ARCHITECTURE.md  QUICK_REFERENCE_CARD.md  README.md  REDUNDANT_KINEMATICS_TOPOLOGY.md  ROS2_CONTROL_DATA_FLOW_DIAGRAM.md  START_HERE.md  SYSTEM_ARCHITECTURE_DIAGRAM.md  TODAY_WORK_SUMMARY_PPT.md  WORK_REPORT.md  dog2_crossing_design_guide.md  dog2_crossing_review_bundle.tgz  generate_control_diagrams.py  generate_diagram.py  generate_diagram.sh  generate_jacobian_derivation.py  generate_kinematics_topology.py  read（复件）.md  run_tests.sh  start_fortress.sh
dog2_champ_config/: CMakeLists.txt  README_CONTROL.md  package.xml
dog2_champ_config/config/gait/: gait.yaml
dog2_champ_config/config/joints/: joints.yaml
dog2_champ_config/config/links/: links.yaml
dog2_champ_config/launch/: champ.launch.py  dog2_champ_fortress.launch.py  dog2_champ_gazebo.launch.py
dog2_champ_config/rviz/: dog2_champ.rviz
dog2_champ_config/scripts/: README_KEYBOARD_CONTROL.md  dog2_keyboard_control.py  dog2_motion_demo.py
dog2_mpc/: CMakeLists.txt
dog2_mpc/config/: mpc_params.yaml
dog2_mpc/include/dog2_mpc/: boundary_constraints.hpp  contact_detector.hpp  crossing_state_machine.hpp  extended_srbd_model.hpp  osqp_interface.hpp  trajectory_generator.hpp
dog2_mpc/launch/: complete_simulation.launch.py  mpc_wbc_simulation.launch.py  simple_crossing_sim.launch.py
dog2_mpc/src/: boundary_constraints.cpp  crossing_state_machine.cpp  extended_srbd_model.cpp  hybrid_gait_generator.cpp  mpc_controller.cpp  mpc_node.cpp  mpc_node_complete.cpp  osqp_interface.cpp  sliding_constraints.cpp  state_simulator.cpp  trajectory_generator.cpp
dog2_mpc/test/: test_crossing_basic.cpp  test_crossing_mpc_simple.cpp  test_mpc_constraints.cpp  test_osqp_interface.cpp  test_osqp_solve_final.cpp  test_simple_tracking.cpp  test_sliding_constraints.cpp
dog2_visualization/: CMakeLists.txt  README.md
dog2_visualization/launch/: visualization_no_gazebo.launch.py
dog2_wbc/: CMakeLists.txt  package.xml
dog2_wbc/src/: wbc_controller.cpp  wbc_node_complete.cpp
src/dog2_dynamics/: CMakeLists.txt  package.xml
src/dog2_dynamics/src/: dog2_model.cpp  test_dog2_model.cpp
回收/: .gitignore  ALTERNATIVE_SOLUTION.md  BLENDER_MODIFICATION_WORKFLOW.md  BLENDER_SIMPLE_IMPORT_GUIDE.md  BLENDER_URDF_IMPORT_GUIDE.md  BLENDER_导入完整装配体指南.md  BRACKET_REDESIGN_QUICK_REFERENCE.md  Blender分离大型Mesh的方法.md  Blender手动分离和编辑指南.md  CHAMP_COMPLIANCE_SUMMARY.md  CHAMP_KINEMATICS_FIX_PLAN.md  CHAMP_KINEMATICS_FIX_SUMMARY.md  CHAMP_KINEMATICS_ISSUE.md  CHAMP_KINEMATICS_ROOT_CAUSE.md  CHAMP_PARAMETER_FIX.md  CHAMP_ROBOT_DESCRIPTION_FIX.md  CHAMP_RVIZ_INTEGRATION_TEST_SUMMARY.md  CHAMP_UNIT_TESTS_SUMMARY.md  CHAMP修复快速指南.md  COLLISION_FIX_SUMMARY.md  CONTROLLER_ACTIVATION_GUIDE.md  CONVEX_HULL_QUICK_START.md  DOG2_4DOF_KINEMATICS.md  DOG2_4DOF_SUMMARY.md  DOG2_CONTROL_ARCHITECTURE.md  DOG2_MESH_FILES_LIST.md  DOG2_MOVEMENT_GUIDE.md  DOG2_SIMPLE_WALK_TEST.md  DOG2_WALKING_GUIDE.md  DOG4_BACKUP_COMPLETE.md  FINAL_SUMMARY.md  FIX_KEYBOARD_CONTROL_NOW.md  FOOT_POSITION_VERIFICATION.md  FreeCAD使用指南.md  FreeCAD安装完成.md  GAZEBO_CONTROLLER_FIX.md  GAZEBO_FORTRESS_MIGRATION.md  GAZEBO_GUI_ISSUE.md  GAZEBO_MESH_PATH_FIX.md  GAZEBO_TEST_GUIDE.md  (+337 more)
回收/.hypothesis/constants/: 010731ec613acf50  01d7721db07b7af7  02f96a674b4e3a41  03361386aec0bf00  0422b63c2bd9deea  04dee2b3cbc563fc  (+229 more)
回收/backups/: dog2.urdf.xacro.before_convex_hull_20260129_180511  dog4_description  hip_joint_axis_change_latest
回收/presentation_viz/: IMPLEMENTATION_STATUS.md  __init__.py  cli.py  config_manager.py  data_models.py  logger.py  ros2_data_collector.py
回收/quick_viz_tools/: BRIGHT_CHARTS_GUIDE_CN.md  CHINESE_FONT_FIX.md  CHINESE_LOCALIZATION_SUMMARY.md  FINAL_SUMMARY_CN.md  NEW_CHARTS_GUIDE.md  QUICK_START.md  README.md  advantage_comparison_cn.py  batch_chinese_localization.py  data_plot.py  energy_pie_cn.py  fsm_diagram.py  generate_all.py  keyframe_sequence.py  kinematic_diagram.py  performance_radar_cn.py  ros_graph.py  success_rate_bar_cn.py  torque_analysis.py  trajectory_comparison.py  workspace_comparison.py
回收/scripts/: CONVEX_HULL_AUTOMATION_README.md  add_collision_filtering.py  add_collision_scale.py  add_scale_to_collisions.py  backup_hip_joint_files.sh  backup_urdf_for_collision_fixes.py  blender_batch_convex_hull.py  blender_simple_workflow.sh  calculate_all_collision_origins.py  calculate_collision_origins.py  calculate_stl_center_of_mass.py  change_joint_axis_to_x.py  complete_convex_hull_workflow.sh  download_unitree_go2.sh  fix_all_collision_origins.py  fix_base_collision_center.py  fix_base_collision_offset.py  fix_gazebo_contact_params.py  fix_phobos_numpy_issue.sh  generate_convex_hulls.sh  import_urdf_to_blender.py  install_gazebo_fortress.sh  install_phobos_for_blender.sh  measure_all_leg_meshes.py  measure_shin_convex_hull.py  measure_stl_mesh.py  merge_coplanar_faces.py  migrate_launch_to_fortress.py  migrate_urdf_to_fortress.py  open_dog2_in_blender.sh  remove_shin_collision.py  replace_with_box.py  replace_with_cylinder.py  restore_hip_joint_files.sh  restore_urdf_from_backup.py  rotate_all_hip_meshes.py  rotate_l1_mesh.py  rotate_l1_trimesh.py  simplify_mesh.py  simplify_mesh_advanced.py  (+13 more)
回收/tests/: __init__.py  test_config_application_property.py  test_config_manager_properties.py  test_config_manager_unit.py  test_data_models.py  test_data_persistence_property.py  test_data_persistence_roundtrip_property.py  test_default_config_fallback_property.py  test_gait_parameters_unit.py  test_hip_axis_modifier_unit.py  test_hip_axis_properties.py  test_infrastructure.py  test_keyboard_control_unit.py  test_kinematics_roundtrip_property.py  test_ros2_controller_config_unit.py  test_ros2_data_collector_unit.py  test_timestamp_monotonicity_property.py  test_topic_subscription_property.py
(+678 files in other folders)
